--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -486,6 +486,11 @@ body {
   color: $black;
   height: 300px;
   padding-top: 80px;
+
+  h1 {
+    font-size: 2em;
+    text-transform: uppercase;
+  }
 }
 
 
