--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
 #share-buttons {
   height: 100px;
   width: 100px;
@@ -180,10 +180,10 @@ body {
   background: #007eff; }
 
 .black-bg {
-  background: url("../images/circuit-pattern-black.png") repeat #000; }
+  background: url("../images/circuit-pattern-black.png") repeat black; }
 
 .white-bg {
-  background: url("../images/circuit-pattern-sm3.png") repeat #fff; }
+  background: url("../images/circuit-pattern-sm3.png") repeat white; }
 
 .jumbotron .cta, .calltool-section .connect {
   text-decoration: none;
@@ -222,11 +222,12 @@ body {
   0% {
     opacity: 0;
     transform: translate3d(0, 30%, 0); }
+
   100% {
     opacity: 1;
     transform: none; } }
 .jumbotron {
-  background: url("../images/circuit-pattern-sm2.png") repeat #000;
+  background: url("../images/circuit-pattern-sm2.png") repeat black;
   margin-bottom: 0; }
   .jumbotron a {
     text-decoration: underline; }
@@ -280,7 +281,7 @@ body {
  * Call section
  */
 .calltool-section {
-  background: url("../images/circuit-pattern-sm2.png") repeat #000;
+  background: url("../images/circuit-pattern-sm2.png") repeat black;
   padding: 60px 0 80px 0; }
   .calltool-section h1, .calltool-section h2 {
     padding: 0;
@@ -413,9 +414,12 @@ body {
     text-align: left; }
 
 .quote-section {
-  background: url("../images/circuit-pattern-sm2.png") repeat #000;
+  background: url("../images/circuit-pattern-sm2.png") repeat black;
   text-shadow: none;
   padding-bottom: 40px; }
+  .quote-section h1 {
+    margin-top: 50px;
+    margin-bottom: 0; }
   .quote-section div div div {
     margin-bottom: 3em; }
     .quote-section div div div:first-of-type {
@@ -497,5 +501,3 @@ body {
 @media (min-width: 1200px) {
   .jumbotron .container h2 {
     padding: 0; } }
-
-/*# sourceMappingURL=style.css.map */
