--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -230,10 +230,10 @@ body {
   background: #007eff; }
 
 .black-bg {
-  background: url("../images/circuit-pattern-black.png") repeat black; }
+  background: url("../images/circuit-pattern-black.png") repeat #000; }
 
 .white-bg {
-  background: url("../images/circuit-pattern-sm3.png") repeat white; }
+  background: url("../images/circuit-pattern-sm3.png") repeat #fff; }
 
 .jumbotron .cta, .calltool-section .connect {
   text-decoration: none;
@@ -272,12 +272,11 @@ body {
   0% {
     opacity: 0;
     transform: translate3d(0, 30%, 0); }
-
   100% {
     opacity: 1;
     transform: none; } }
 .jumbotron {
-  background: url("../images/circuit-pattern-sm2.png") repeat black;
+  background: url("../images/circuit-pattern-sm2.png") repeat #000;
   margin-bottom: 0; }
   .jumbotron a {
     text-decoration: underline; }
@@ -331,7 +330,7 @@ body {
  * Call section
  */
 .calltool-section {
-  background: url("../images/circuit-pattern-sm2.png") repeat black;
+  background: url("../images/circuit-pattern-sm2.png") repeat #000;
   padding: 60px 0 80px 0; }
   .calltool-section h1, .calltool-section h2 {
     padding: 0;
@@ -464,12 +463,14 @@ body {
     text-align: left; }
 
 .quote-section {
-  background: url("../images/circuit-pattern-sm2.png") repeat black;
+  background: url("../images/circuit-pattern-sm2.png") repeat #000;
   text-shadow: none;
-  padding-bottom: 40px; }
+  padding-bottom: 40px;
+  text-align: center; }
   .quote-section h1 {
     margin-top: 50px;
-    margin-bottom: 0; }
+    margin-bottom: 0;
+    text-align: center; }
   .quote-section div div div {
     margin-bottom: 3em; }
     .quote-section div div div:first-of-type {
@@ -490,12 +491,47 @@ body {
 
 .tweet-section {
   background-color: #fcfcfc;
-  color: #151515;
-  height: 300px;
-  padding-top: 80px; }
+  padding-top: 60px;
+  padding-bottom: 40px;
+  color: #151515; }
   .tweet-section h1 {
+    color: #007eff;
+    font-weight: 700;
     font-size: 2em;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    letter-spacing: 0.08em; }
+  .tweet-section .tweet-block {
+    display: block;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    height: 8em;
+    margin-bottom: 1em; }
+    .tweet-section .tweet-block:hover {
+      background: rgba(0, 126, 255, 0.3);
+      border-color: rgba(0, 126, 255, 0.3); }
+    .tweet-section .tweet-block div {
+      padding-top: 1em; }
+      @media (min-width: 768px) {
+        .tweet-section .tweet-block div {
+          padding-top: 0.5em; } }
+    .tweet-section .tweet-block img {
+      padding-top: 1.5em;
+      width: 3em;
+      height: auto; }
+      @media (min-width: 768px) {
+        .tweet-section .tweet-block img {
+          padding-top: 1em;
+          width: 4em; } }
+    .tweet-section .tweet-block p {
+      color: #151515;
+      padding-left: 1em;
+      font-size: 0.9em;
+      padding-top: 0.8em;
+      text-align: left; }
+      @media (min-width: 768px) {
+        .tweet-section .tweet-block p {
+          font-size: 1.2em;
+          padding-top: 1.1em; } }
 
 /*
  * Footer
@@ -551,3 +587,5 @@ body {
 @media (min-width: 1200px) {
   .jumbotron .container h2 {
     padding: 0; } }
+
+/*# sourceMappingURL=style.css.map */
