--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -512,9 +512,11 @@ body {
   background: url('../images/circuit-pattern-sm2.png') repeat #000;
   text-shadow: none;
   padding-bottom: 40px;
+  text-align: center;
   h1 {
     margin-top:50px; 
     margin-bottom: 0;
+    text-align: center;
   }
   div div div { // quotes
     margin-bottom: 3em;
@@ -546,13 +548,60 @@ body {
 
 .tweet-section {
   background-color: $white;
+  //height: 400px;
+  padding-top: 60px;
+  padding-bottom: 40px;
   color: $black;
-  height: 300px;
-  padding-top: 80px;
 
   h1 {
+    color: $blue;
+    font-weight: 700;
     font-size: 2em;
     text-transform: uppercase;
+    letter-spacing: 0.08em;
+  }
+  .tweet-block {
+    &:hover {
+      background: $trans-blue;
+      // cursor: pointer;
+      border-color: $trans-blue;
+    }
+    display: block;
+    border-radius: 5px;
+    border: 1px solid rgba(0,0,0,0.3);
+    height: 8em;
+    margin-bottom: 1em;
+
+    div {
+      padding-top: 1em;
+      @include breakpoint($medium) {
+        padding-top: 0.5em;
+      }
+    }
+    img {
+      //display: block;
+      //float: left;
+      //padding: 1.5em;
+      padding-top: 1.5em;
+      width: 3em;
+      height: auto;
+      @include breakpoint($medium) {
+        padding-top: 1em;
+        width: 4em;
+
+      }
+    }
+    p {
+      color: $black;
+      padding-left: 1em;
+      font-size: 0.9em;
+      padding-top: 0.8em;
+      @include breakpoint($medium) {
+        font-size: 1.2em;
+        padding-top: 1.1em;
+      }
+      text-align: left;
+    }
   }
 }
 
@@ -586,7 +635,6 @@ body {
     text-decoration: none;
     color: #fff;
   }
-
 
 }
 
