--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -500,15 +500,20 @@ body {
     font-size: 2em;
     text-transform: uppercase;
     letter-spacing: 0.08em; }
+  .tweet-section h5 {
+    margin-top: 2em;
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 1.1em;
+    color: #151515;
+    font-weight: 700;
+    letter-spacing: 0.08em; }
   .tweet-section .tweet-block {
+    background-color: #007eff;
     display: block;
     border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
     height: 8em;
     margin-bottom: 1em; }
-    .tweet-section .tweet-block:hover {
-      background: rgba(0, 126, 255, 0.3);
-      border-color: rgba(0, 126, 255, 0.3); }
     .tweet-section .tweet-block div {
       padding-top: 1em; }
       @media (min-width: 768px) {
@@ -523,7 +528,7 @@ body {
           padding-top: 1em;
           width: 4em; } }
     .tweet-section .tweet-block p {
-      color: #151515;
+      color: #fff;
       padding-left: 1em;
       font-size: 0.9em;
       padding-top: 0.8em;
