--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -560,15 +560,26 @@ body {
     text-transform: uppercase;
     letter-spacing: 0.08em;
   }
+
+  h5 {
+    margin-top: 2em;
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 1.1em;
+    color: $black;
+    font-weight: 700;
+    letter-spacing: 0.08em;
+  }
   .tweet-block {
-    &:hover {
-      background: $trans-blue;
-      // cursor: pointer;
-      border-color: $trans-blue;
-    }
+    background-color: #007eff;
+    // &:hover {
+    //   background: $trans-blue;
+    //   // cursor: pointer;
+    //   border-color: $trans-blue;
+    // }
     display: block;
     border-radius: 5px;
-    border: 1px solid rgba(0,0,0,0.3);
+    //border: 1px solid rgba(0,0,0,0.3);
     height: 8em;
     margin-bottom: 1em;
 
@@ -592,7 +603,7 @@ body {
       }
     }
     p {
-      color: $black;
+      color: #fff;
       padding-left: 1em;
       font-size: 0.9em;
       padding-top: 0.8em;
