--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -617,6 +617,18 @@ body {
 }
 
 
+// logo section
+
+.logo-section {
+  padding: 80px 20px;
+  background-color: #000;
+  img {
+    width: 8em;
+    height: auto;
+    padding: 1em;
+  }
+}
+
 /*
  * Footer
  */
