--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -327,7 +327,8 @@ body {
     line-height: 1.1; }
 
 #video-container iframe {
-  max-width: 100%; }
+  max-width: 100%;
+  margin: 30px 0 30px; }
 
 #video-container img {
   margin-top: 30px;
