--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -289,7 +289,10 @@ body {
 }
 #video-container {
   //box-shadow: 0px 0px 30px rgba(0,0,0,0.8);
-  iframe {max-width: 100%;}
+  iframe {
+    max-width: 100%;
+    margin: 30px 0 30px;
+  }
 }
 #video-container img {
   margin-top: 30px;
