Typographic tightening and margin issues on call widget

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -217,7 +217,8 @@ body {
 
 .navbar-inverse .navbar-brand {
   color: #fff;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  letter-spacing: 0.15em; }
 
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > li > a {
   color: #007eff;
@@ -248,7 +249,8 @@ body {
   border-radius: 4px;
   margin-top: 2em;
   background-color: transparent;
-  outline: 0; }
+  outline: 0;
+  width: 84%; }
   .jumbotron .cta:hover, .calltool-section .connect:hover {
     background-color: white;
     color: #151515; }
@@ -401,11 +403,13 @@ body {
     margin-bottom: 20px;
     margin-top: 2.5em;
     font-family: 'Lato';
-    font-weight: 600;
+    font-weight: 400;
     font-style: normal;
     text-align: left;
-    margin-left: 1em;
-    letter-spacing: 0.12em; }
+    margin-left: 8%;
+    letter-spacing: 0.12em;
+    line-height: 18px;
+    width: 84%; }
   #tf-call-widget-form label {
     font-size: 16px; }
   #tf-call-widget-form .privacy-info {
