Social buttons for mobile, more tightening

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -320,6 +320,14 @@ body {
 /*
  * Video section
  */
+.mobile-social {
+  list-style-type: none; }
+  .mobile-social li {
+    display: inline;
+    padding-right: 2em; }
+    .mobile-social li:last-of-type {
+      padding-right: 0; }
+
 .video-section {
   padding: 30px 0; }
   .video-section p {
@@ -556,7 +564,7 @@ body {
       @media (min-width: 768px) {
         .tweet-section .tweet-block img {
           padding-top: 1em;
-          width: 4em; } }
+          width: 5em; } }
     .tweet-section .tweet-block p {
       color: #fff;
       padding-left: 1em;
