Increase logo size

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -580,7 +580,7 @@ body {
   padding: 80px 20px;
   background-color: #000; }
   .logo-section img {
-    width: 8em;
+    width: 180px;
     height: auto;
     padding: 1em; }
     .logo-section img:first-of-type {
