--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -655,7 +655,7 @@ body {
   padding: 80px 20px;
   background-color: #000;
   img {
-    width: 8em;
+    width: 180px;
     height: auto;
     padding: 1em;
     &:first-of-type {
