resize EFF logo at bottom

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -586,7 +586,7 @@ body {
     height: auto;
     padding: 1em; }
     .logo-section img:first-of-type {
-      width: 20em; }
+      width: 200px; }
 
 /*
  * Footer
