--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -586,7 +586,10 @@ body {
     height: auto;
     padding: 1em; }
     .logo-section img:first-of-type {
-      width: 200px; }
+      width: 300px; }
+      @media (min-width: 768px) {
+        .logo-section img:first-of-type {
+          width: 400px; } }
 
 /*
  * Footer
