--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -16,12 +16,12 @@ $small: max-width 767px;
  */
 
 /* Lato */
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Lato Hairline'), local('Lato-Hairline'), url(../fonts/Lato-Hairline.woff) format('woff');
-}
+// @font-face {
+//   font-family: 'Lato';
+//   font-style: normal;
+//   font-weight: 100;
+//   src: local('Lato Hairline'), local('Lato-Hairline'), url(../fonts/Lato-Hairline.woff) format('woff');
+// }
 @font-face {
   font-family: 'Lato';
   font-style: normal;
@@ -40,56 +40,57 @@ $small: max-width 767px;
   font-weight: 700;
   src: local('Lato Bold'), local('Lato-Bold'), url(../fonts/Lato-Bold.woff) format('woff');
 }
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 900;
-  src: local('Lato Black'), local('Lato-Black'), url(../fonts/Lato-Black.woff) format('woff');
-}
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 100;
-  src: local('Lato Hairline Italic'), local('Lato-HairlineItalic'), url(../fonts/Lato-HairlineItalic.woff) format('woff');
-}
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 300;
-  src: local('Lato Light Italic'), local('Lato-LightItalic'), url(../fonts/Lato-LightItalic.woff) format('woff');
-}
+// }
+// @font-face {
+//   font-family: 'Lato';
+//   font-style: normal;
+//   font-weight: 900;
+//   src: local('Lato Black'), local('Lato-Black'), url(../fonts/Lato-Black.woff) format('woff');
+// }
+// @font-face {
+//   font-family: 'Lato';
+//   font-style: italic;
+//   font-weight: 100;
+//   src: local('Lato Hairline Italic'), local('Lato-HairlineItalic'), url(../fonts/Lato-HairlineItalic.woff) format('woff');
+// }
+// @font-face {
+//   font-family: 'Lato';
+//   font-style: italic;
+//   font-weight: 300;
+//   src: local('Lato Light Italic'), local('Lato-LightItalic'), url(../fonts/Lato-LightItalic.woff) format('woff');
+// }
 @font-face {
   font-family: 'Lato';
   font-style: italic;
   font-weight: 400;
   src: local('Lato Italic'), local('Lato-Italic'), url(../fonts/Lato-Italic.woff) format('woff');
 }
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 700;
-  src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(../fonts/Lato-BoldItalic.woff) format('woff');
-}
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 900;
-  src: local('Lato Black Italic'), local('Lato-BlackItalic'), url(../fonts/Lato-BlackItalic.woff) format('woff');
-}
+// @font-face {
+//   font-family: 'Lato';
+//   font-style: italic;
+//   font-weight: 700;
+//   src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(../fonts/Lato-BoldItalic.woff) format('woff');
+// }
+// @font-face {
+//   font-family: 'Lato';
+//   font-style: italic;
+//   font-weight: 900;
+//   src: local('Lato Black Italic'), local('Lato-BlackItalic'), url(../fonts/Lato-BlackItalic.woff) format('woff');
+// }
 
-/* Montserrat */
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Montserrat-Regular'), url(../fonts/Montserrat-Regular.woff) format('woff');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Montserrat-Bold'), url(../fonts/Montserrat-Bold.woff) format('woff');
-}
+// /* Montserrat */
+// @font-face {
+//   font-family: 'Montserrat';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: local('Montserrat-Regular'), url(../fonts/Montserrat-Regular.woff) format('woff');
+// }
+// @font-face {
+//   font-family: 'Montserrat';
+//   font-style: normal;
+//   font-weight: 700;
+//   src: local('Montserrat-Bold'), url(../fonts/Montserrat-Bold.woff) format('woff');
+// }
 
 /* Links */
 a,
