--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -286,13 +286,13 @@ body {
     list-style-type: none;
     li {
       display: inline;
-      padding-right: 2em;
+      margin-right: 2em;
       img {
-        width: 4em;
+        width: 3.5em;
         height: auto;
       }
       &:last-of-type {
-        //padding-right: 0;
+        //margin-right: 0;
       }
     }
   }
