--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -5,19 +5,10 @@ html(lang="en")
     title Fight 215 Banner
   body
     div(id="fight215-banner")
-      div
-        img(src="images/215-eye.png")
-      div
-        p(id="fight215-timer")
-            span 00
-            |  days 
-            span 00
-            |  hours 
-            span 00
-            |  minutes 
-            span 00
-            |  seconds to end mass surveillance under the Patriot Act
-      div Speak out.
-
-    //- script(type="text/javascript" src="scripts/vendor/vendor.min.js")
+      ul
+        li(id="days") 00
+        li(id="hours") 00
+        li(id="minutes") 00
+        li(id="seconds") 00
+      p to end mass surveillance under the Patriot Act
     script(type="text/javascript" src="scripts/main.min.js")
