--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     link(rel="stylesheet" type="text/css" href="styles/main.min.css")
+    meta(name="viewport" content="initial-scale=1")
     title Fight 215 Banner
   body
     div(id="fight215-banner")
