--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -6,10 +6,15 @@ html(lang="en")
     title Fight 215 Banner
   body
     div(id="fight215-banner")
-      ul
-        li(id="days") 00
-        li(id="hours") 00
-        li(id="minutes") 00
-        li(id="seconds") 00
-      p to end mass surveillance under the Patriot Act
+      div
+        img(src="images/215-eye.png")
+      div
+        ul
+          li(id="days") 00
+          li(id="hours") 00
+          li(id="minutes") 00
+          li(id="seconds") 00
+        p to end mass surveillance under the Patriot Act
+      div
+        button Speak out
     script(type="text/javascript" src="scripts/main.min.js")
