Fix hover state cursor on button

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -146,6 +146,10 @@ body // Move everything down to make room for banner
       margin-top: 0.9em
       margin-left: -1em
 
+      &:hover
+        cursor: pointer
+
+
 
 
 
