Overflow and scroll disabled on iframe

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -64,6 +64,7 @@ body // Move everything down to make room for banner
   left: 0
   z-index: 20000
   background-color: transparent
+  overflow: none
 
 
 #fight215-banner
